# mdchat

./: .gitignore  README.md
client/: Cargo.toml  README.md
client/src/: main.rs  message.rs  util.rs
common/: Cargo.toml  README.md
common/src/: command.rs  lib.rs  login.rs  message.rs
common/src/command/: c2s.rs  s2c.rs
server/: Cargo.toml  README.md
server/doc/: configuration.md
server/src/: client.rs  client_list.rs  listener.rs  macros.rs  main.rs  message_list.rs  message_queue.rs  user.rs  user_list.rs
serverconf/: Cargo.toml  README.md
serverconf/src/: error.rs  ip.rs  lib.rs  message.rs  nickname.rs
