[package]
name = "mdchat_client"
version = "0.2.0"
authors = ["Michal Douša <dousamichal0807@seznam.cz>"]
edition = "2018"
description = "A simple CLI chat client written in Rust"
readme = "README.md"
repository = "https://github.com/dousamichal0807/mdchat"
license = "AGPL-3.0-or-later"

[dependencies]
mdchat_common = { path = "../common" }
mdcrypt = { git = "https://github.com/dousamichal0807/mdcrypt" }
mdswp = { git = "https://github.com/dousamichal0807/mdswp" }
once_cell = "1.10.0"
serde_json = "1.0.79"