[package]
name = "mdchat_common"
version = "0.2.0"
authors = ["Michal Douša <dousamichal0807@seznam.cz>"]
edition = "2018"
description = "A simple chat client and server written in Rust."
readme = "README.md"
repository = "https://github.com/dousamichal0807/mdchat"
license = "GNU AGPL v3"
license-file = "../LICENSE"

[dependencies]
bit-vec = "0.6.3"
chrono = "0.4.19"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
