[package]
name = "mdchat_server"
version = "0.2.0"
authors = ["Michal Douša <dousamichal0807@seznam.cz>"]
edition = "2018"

[dependencies]
chrono = "0.4"
mdchat_serverconf = { path = "../serverconf" }
mdchat_common = { path = "../common" }
mdcrypt = { git = "https://github.com/dousamichal0807/mdcrypt" }
mdlog = { git = "https://github.com/dousamichal0807/mdlog" }
mdswp = { git = "https://github.com/dousamichal0807/mdswp" }
once_cell = "1.10"
regex = "1.5"
thiserror = "1.0"