[package]
name = "mdchat_server"
version = "0.2.0"
authors = ["Michal Douša <dousamichal0807@seznam.cz>"]
edition = "2018"
description = "A simple chat server written in Rust."
readme = "README.md"
repository = "https://github.com/dousamichal0807/mdchat"
license = "AGPL-3.0-or-later"

[dependencies]
chrono = "0.4.19"
mdchat_common = { path = "../common" }
mdchat_serverconf = { path = "../serverconf" }
mdcrypt = { git = "https://github.com/dousamichal0807/mdcrypt" }
mdlog = { git = "https://github.com/dousamichal0807/mdlog", branch = "v0.2.0" }
mdswp = { git = "https://github.com/dousamichal0807/mdswp", branch = "v0.2.0" }
once_cell = "1.10.0"
regex = "1.5.5"
serde_json = "1.0.79"
thiserror = "1.0.30"