[package]
name = "mdchat_serverconf"
authors = ["Michal Douša <dousamichal0807@seznam.cz>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdlog = { git = "https://github.com/dousamichal0807/mdlog" }
once_cell = "1.10"
regex = "1.5"
thiserror = "1.0"
