[package]
name = "mdchat_serverconf"
authors = ["Michal Douša <dousamichal0807@seznam.cz>"]
version = "0.2.0"
edition = "2021"
description = "A simple chat server written in Rust."
readme = "README.md"
repository = "https://github.com/dousamichal0807/mdchat"
license = "GNU AGPL v3"
license-file = "../LICENSE"

[dependencies]
mdlog = { git = "https://github.com/dousamichal0807/mdlog", branch = "v0.2.0" }
once_cell = "1.10"
regex = "1.5"
thiserror = "1.0"
